# xdiff

./: Cargo.toml  README.md
examples/: config.rs  req_call.rs  similar.rs  web_demo.rs
fixtures/: test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
