[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
console = "0.15.11"
http-serde = "2.1.1"
reqwest = { version = "0.12.15", default-features = false, features = ["__rustls"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
similar = "2.7.0"
tokio = { version = "1.44.2", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
