[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
console = "0.15.11"
http = "1.1.0"
http-serde = "2.1.1"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
similar = { version = "2.6.0", features = ["inline", "bytes"] }
tokio = { version = "1.45.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
